--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -39,104 +39,105 @@
     %h1
       おすすめ企画
     .project-wrapper__projects
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_0741.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            ポルトガルへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      - @projects.each do |project|
+        .project-wrapper__projects--content
+          .project-wrapper__projects--content--image
+            = image_tag project.image, size: "300x200"
+          .project-wrapper__projects--content--details
+            .project-wrapper__projects--content--details--userImage
+              = image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+            .project-wrapper__projects--content--details--title
+              = project.title
+            .project-wrapper__projects--content--details--date.clearfix
+              = project.departure_date.strftime("%Y年%m月")
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_9557.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            カンボジアへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_9557.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       カンボジアへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_0365.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            チェコへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_0365.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       チェコへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_0625.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            スペインへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_0625.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       スペインへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_2240.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            モロッコへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_2240.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       モロッコへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_9931.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            シンガポールへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_9931.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       シンガポールへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_1692.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            インドへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_1692.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       インドへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_3450.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            ロシアへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_3450.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       ロシアへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
 
-      .project-wrapper__projects--content
-        .project-wrapper__projects--content--image
-          =image_tag "IMG_7500.jpg", size: "300x200"
-        .project-wrapper__projects--content--details
-          .project-wrapper__projects--content--details--userImage
-            =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
-          .project-wrapper__projects--content--details--title
-            モンゴルへ行こう
-          .project-wrapper__projects--content--details--date.clearfix
-            2018年2月
+      -# .project-wrapper__projects--content
+      -#   .project-wrapper__projects--content--image
+      -#     =image_tag "IMG_7500.jpg", size: "300x200"
+      -#   .project-wrapper__projects--content--details
+      -#     .project-wrapper__projects--content--details--userImage
+      -#       =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
+      -#     .project-wrapper__projects--content--details--title
+      -#       モンゴルへ行こう
+      -#     .project-wrapper__projects--content--details--date.clearfix
+      -#       2018年2月
     .moreProjects#more.clearfix
       もっと見る
   .login-wrapper
