--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -47,7 +47,7 @@
             .project-wrapper__projects--content--details--userImage
               = image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
             .project-wrapper__projects--content--details--title
-              = project.title
+              = link_to project.title, project_path(project.id)
             .project-wrapper__projects--content--details--date.clearfix
               = project.departure_date.strftime("%Y年%m月")
 
