--- a/app/assets/stylesheets/_project-wrapper.scss
+++ b/app/assets/stylesheets/_project-wrapper.scss
@@ -18,6 +18,7 @@
       height: 300px;
       padding:0 20px 0 20px;
       float: left;
+      position: relative;
       &--image{
         width: 300px;
         height: 200px;
@@ -33,11 +34,21 @@
           border-radius: 50%;
         }
         &--title{
-          text-align: center;
           color: gray;
           font-size: 14px;
-          padding: 10px 0 10px 10px;
+          padding: 10px 0 10px 30px;
           float: left;
+          a{
+            top: 0px;
+            left: 0px;
+            width:100%;
+            height:100%;
+            position: absolute;
+            padding-top: 210px;
+            padding-left: 70px;
+            text-decoration: none;
+            color: gray;
+          }
         }
         &--date{
           float: left;
