--- a/app/views/projects/_projectShow.html.haml
+++ b/app/views/projects/_projectShow.html.haml
@@ -1,18 +1,22 @@
 .project-show-wrapper
-  .project-show-wrapper__title
+  .project-show-wrapper__title.clearfix
     = @project.title
-    %p
+    .project-show-wrapper__title--left
       企画詳細
-  .project-show-wrapper__contents
+  - if user_signed_in? && current_user.id === @project.planner_id
+    .project-show-wrapper__title--right
+      = link_to "企画を編集", edit_project_path(@project.id), class: "link"
+
+  .project-show-wrapper__contents.clearfix
     .project-show-wrapper__contents--left
       .project-show-wrapper__contents--left--top
         .project-show-wrapper__contents--left--top--image
           = image_tag @project.image, size: "600x500"
         .project-show-wrapper__contents--left--top--userInfo
           .project-show-wrapper__contents--left--top--userInfo--image
-            =image_tag "IMG_9087.jpg", size: "80x80", style: "border-radius:50%;"
+            =image_tag @user.image, size: "80x80", style: "border-radius:50%;"
           .project-show-wrapper__contents--left--top--userInfo--name
-            あああ
+            = @user.name
         .project-show-wrapper__contents--left--top--introduction
           = @project.introduction
 
