--- a/app/assets/stylesheets/_projectShow.scss
+++ b/app/assets/stylesheets/_projectShow.scss
@@ -1,17 +1,20 @@
 .project-show-wrapper{
   padding: 100px 200px;
   background: #e0e0e0;
+  height: 2000px;
   &__title{
     color: gray;
-    font-size: 24px;
+    font-size: 36px;
     &--left{
+      margin-top: 30px;
       padding-top: 40px;
+      margin-bottom: 10px;
       font-size: 20px;
       float: left;
     }
     &--right{
       float: right;
-      padding-bottom: 10px;
+      margin-top: 10px;
       .link{
         font-size: 20px;
         text-decoration: none;
@@ -28,6 +31,7 @@
     padding-top: 20px;
     &--left{
       width: 600px;
+      float: left;
       &--top{
         &--image{
         width: 100%;
@@ -103,6 +107,52 @@
           padding-top: 20px;
           color: gray;
           border-top: 1px solid gray;
+        }
+      }
+    }
+    &--right{
+      float: left;
+      width: 330px;
+      height: 200px;
+      background: white;
+      margin-left: 30px;
+      text-align: center;
+      &--apply{
+        p{
+        padding-top: 30px;
+        color: #e0e0e0;
+        }
+        &--status{
+          padding-top: 20px;
+          font-size: 30px;
+          color: #99FF33;
+          margin-bottom: 20px;
+        }
+        &--applyBtn{
+          padding: 10px 20px;
+          width: 80%;
+          height: 20px;
+          background: #FF6633;
+          margin: 0 auto;
+          position: relative;
+          a{
+            top: 0px;
+            left: 0px;
+            width:100%;
+            height:100%;
+            position: absolute;
+            text-decoration: none;
+            color: gray;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            padding-top: 10px;
+          }
+          // .applyBtn{
+          //   color: white;
+          //   text-align: center;
+          //   text-decoration: none;
+          // }
         }
       }
     }
