Install font-awesome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,5 @@
 @import "./projectCreate";
 @import "./projectShow";
 @import "./participants";
+@import "font-awesome-sprockets";
+@import "font-awesome";
