--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,23 +1,4 @@
-.top-wrapper
-  .top-wrapper__upper
-    .top-wrapper__upper--left
-      = link_to "trippiece", root_path, class: "link"
-    .top-wrapper__upper--right
-      %ul
-        %li
-          マイリスト
-        %li
-          メッセージ
-        %li
-          通知
-        %li
-          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
-        %li
-          = link_to "プロフィール", user_path(current_user.id), class: "link"
-        %li
-          = link_to "設定", edit_user_path(current_user.id), class: "link"
-        %li
-          = link_to "企画を作成", new_project_path, class: "link"
+= render "projects/topWrapper"
 
 .edit-wrapper
   .edit-wrapper__main
@@ -42,6 +23,12 @@
         .edit-wrapper__main--right--selfIntroduction.clearfix
           = f.label :selfintroduction, value: "自己紹介", class: "label"
           %br
-          = f.text_field :selfintroduction, class:"text-form", value: "", class: "text-form", placeholder: "自己紹介を入力しよう"
+          = f.text_area :selfintroduction, class:"text-form", value: "", class: "text-form", placeholder: "自己紹介を入力しよう"
         .edit-wrapper__main--right--editBtn
           = f.submit "保存する", class: 'editBtn'
+
+-# モーダル
+#drop-modal-wrapper
+  = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
+  = link_to "プロフィール", user_path(current_user.id), class: "link"
+  = link_to "設定", edit_user_path(current_user.id), class: "link"
