--- a/app/assets/stylesheets/_afterSignIn.scss
+++ b/app/assets/stylesheets/_afterSignIn.scss
@@ -13,38 +13,164 @@
       float: left;
     }
     &--right{
+      position: relative;
       ul{
         float: right;
       }
       li{
         float: left;
         margin-left: 20px;
+        &:hover{
+            color: gray;
+            cursor: pointer;
+          }
+        .fa-plane{
+        }
         .link{
           text-decoration: none;
           color: black;
+          &:hover{
+            color: gray;
+            cursor: pointer;
+          }
         }
+      }
+      &--drop-modal-wrapper{
+        display: none;
       }
     }
   }
   &__middle{
-    background-image: url("IMG_0276.jpg");
-    background-size: cover;
-    width: 100%;
-    height: 550px;
-    color: white;
-    &--title{
+    // background-image: url("IMG_0276.jpg");
+    // background-size: cover;
+    // width: 100%;
+    // height: 550px;
+    // color: white;
+    &--slide{
+      display: none;
+      width: 100%;
+      height: 550px;
+      .backimage{
+        width: 100%;
+        height: 550px;
+        position: relative;
+      }
+      &--changeBtns{
+        color: white;
+        .prev{
+          float: left;
+          position: absolute;
+          top: 270px;
+          left: 50px;
+          .fa-arrow-left{
+            font-size: 30px;
+            &:hover{
+              color: gray;
+            }
+          }
+        }
+        .next{
+          float: right;
+          position: absolute;
+          top: 270px;
+          right: 50px;
+          .fa-arrow-right{
+            font-size: 30px;
+            &:hover{
+              color: gray;
+            }
+          }
+        }
+      }
+      &--title{
       padding-top: 50px;
       padding-left: 100px;
+      color: white;
+      position: absolute;
+      top: 50px;
       &--main{
         font-size: 50px;
         -webkit-text-stroke-color: #000;
         -webkit-text-stroke-width: 1px;
         font-weight: bold;
-      }
-      &--sub{
-
+        }
       }
     }
   }
+  &__bottom{
+    width: 100%;
+    height: 70px;
+    background: white;
+    &--contents{
+      width: 60%;
+      margin: 0 auto;
+      li{
+        width: 20%;
+        height: 70px;
+        float: left;
+        list-style: none;
+        &:hover{
+          cursor: pointer;
+          background: #e0e0e0;
+          opacity: 0.7;
+        }
+      }
+    }
+  }
+}
 
+.active{
+  display: block;
+}
+
+#drop-modal-wrapper{
+  z-index: 10;
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: 130px;
+  width: 100px;
+  height: 80px;
+  padding: 10px 20px;
+  position: fixed;
+  background: white;
+  .link{
+    &:hover{
+      color: gray;
+    }
+  }
+}
+
+#mylist-modal-wrapper{
+  z-index: 10;
+  display: none;
+  width: 300px;
+  height: 600px;
+  padding: 20px 30px;
+  position: absolute;
+  top: 50px;
+  right: 200px;
+  overflow: scroll;
+  position: fixed;
+  background: white;
+  &--head{
+    color: gray;
+    margin-bottom: 10px;
+  }
+  &--contents{
+    height: 50px;
+    &--image{
+      float: left;
+    }
+    &--title{
+      float: left;
+      line-height: 40px;
+      margin-left: 10px;
+      .link{
+        text-decoration: none;
+        color: gray;
+        font-size: 14px;
+      }
+    }
+  }
 }
