--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -41,7 +41,7 @@ header{
             width: 210px;
             height: 30px;
             line-height: 30px;
-            font-size:14px;
+            font-size:13px;
             background: #1e50a2;
             padding:10px 20px;
             float:left;
@@ -57,6 +57,11 @@ header{
             float:right;
             text-decoration: none;
             position:relative;
+            .btn{
+              &:hover{
+                color: gray;
+              }
+            }
              a{
               position:absolute;
               top:0;
@@ -83,7 +88,7 @@ header{
           width: 210px;
           height: 30px;
           line-height: 30px;
-          font-size:14px;
+          font-size:13px;
           background: #cd5e3c;
           padding:10px 20px;
           margin: 0 auto;
@@ -110,6 +115,9 @@ header{
       width:100%;
       height:100%;
       padding-top: 10px;
+      &:hover{
+        color: gray;
+      }
     }
   }
 }
