--- a/app/assets/stylesheets/_login-wrapper.scss
+++ b/app/assets/stylesheets/_login-wrapper.scss
@@ -28,7 +28,7 @@
             width: 210px;
             height: 30px;
             line-height: 30px;
-            font-size:14px;
+            font-size:13px;
             background: #1e50a2;
             padding:10px 20px;
             float:left;
@@ -50,6 +50,9 @@
               width:100%;
               height:100%;
               padding-top: 10px;
+              &:hover{
+                color: gray;
+              }
             }
           }
         }
@@ -69,7 +72,7 @@
           width: 210px;
           height: 30px;
           line-height: 30px;
-          font-size:14px;
+          font-size:13px;
           background: #cd5e3c;
           padding:10px 20px;
           margin: 0 auto;
@@ -96,6 +99,9 @@
       width:100%;
       height:100%;
       padding-top: 10px;
+      &:hover{
+        color: gray;
+      }
     }
   }
 }
