--- a/app/assets/stylesheets/_project-wrapper.scss
+++ b/app/assets/stylesheets/_project-wrapper.scss
@@ -1,6 +1,6 @@
 .project-wrapper{
   width: 100%;
-  height: 3000px;
+  height: 2500px;
   margin: 0 auto;
   padding: 100px 0 100px 0;
   background: #e0e0e0;
@@ -19,6 +19,9 @@
       padding:0 20px 0 20px;
       float: left;
       position: relative;
+      &:hover{
+        opacity: 0.7;
+      }
       &--image{
         width: 300px;
         height: 200px;
