--- a/app/assets/stylesheets/_projectCreate.scss
+++ b/app/assets/stylesheets/_projectCreate.scss
@@ -22,6 +22,7 @@
         }
       }
       &--right{
+        margin-top: 10px;
         float: left;
         line-height: 50px;
         margin-left: 20px;
