--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,23 +1,4 @@
-.top-wrapper
-  .top-wrapper__upper
-    .top-wrapper__upper--left
-      = link_to "trippiece", root_path, class: "link"
-    .top-wrapper__upper--right
-      %ul
-        %li
-          マイリスト
-        %li
-          メッセージ
-        %li
-          通知
-        %li
-          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
-        %li
-          = link_to "プロフィール", user_path(current_user.id), class: "link"
-        %li
-          = link_to "設定", edit_user_path(current_user.id), class: "link"
-        %li
-          = link_to "企画を作成", new_project_path, class: "link"
+= render "projects/topWrapper"
 
 .main-wrapper
   .main-wrapper--profile
@@ -72,3 +53,9 @@
             = link_to project.title, project_path(project.id)
           .project-wrapper__projects--content--details--date.clearfix
             = project.departure_date.strftime("%Y年%m月")
+
+-# モーダル
+#drop-modal-wrapper
+  = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
+  = link_to "プロフィール", user_path(current_user.id), class: "link"
+  = link_to "設定", edit_user_path(current_user.id), class: "link"
