Create link to User#show at Project#show

--- a/app/assets/stylesheets/_projectShow.scss
+++ b/app/assets/stylesheets/_projectShow.scss
@@ -50,7 +50,10 @@
           float: left;
           line-height: 80px;
           margin-left: 20px;
-          color: orange;
+          .link{
+            text-decoration: none;
+            color: orange;
+          }
           }
         }
         &--introduction{
