--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -67,8 +67,9 @@
             = project.departure_date.strftime("%Y年%m月")
 
   .project-wrapper__revieLink.clearfix
-  - unless current_user.id == @user.id
-    = link_to "このUserの口コミを投稿する", new_user_review_path(@user.id)
+    -if user_signed_in?
+      - unless current_user.id == @user.id
+        = link_to "このUserの口コミを投稿する", new_user_review_path(@user.id)
 
 -# モーダル
 #drop-modal-wrapper
